<resources>
    <string name="app_name">AuctionSystem</string>
    <string name="title_activity_account_creation">AccountCreationActivity</string>
    <string name="prefKey">User Type</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_sign_first">Don\'t Have Any account?</string>
    <string name="not_sign_second">Sign Up Here</string>
    <string name="user_logged_in">User Logged In</string>
    <string name="title_activity_user_account">UserAccountActivity</string>
    <string name="invalid_email">Incorrect Email</string>
    <string name="user_Not_found">User Not Found</string>
    <string name="prefType">User Type</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_error">Invalid Password</string>
    <string name="password_not_matches">Password Do not Match</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="account_creation_succesful">Account Creation Succesfull</string>
    <string name="account_successFull">Account Creation was Successful</string>
    <string name="USerName">Enter User Name</string>
    <string name="member_type_not_selected">Category Not Selected</string>
    <string name="sign_out">Sign Out</string>
    <string name="post_An_item">Post an Item</string>
    <string name="Auctioner_type">Auctioner</string>
    <string name="Bidder_type">Bidder</string>
    <string name="my_auctions">View My Auctions</string>
    <string name="future_auctions">View All Future Auctions</string>
    <string name="win_auctions">View My Winner Auctions</string>
    <string name="live_auctions">View Live Auctions</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_item_min_bid">Enter Item Minimum Bid</string>
    <string name="enter_item_category">Enter Catetgory Type</string>
    <string name="Click_to_upload">Upload Item Data</string>
    <string name="enter_Bid">Enter Bid Here</string>
    <string-array name="member_type">
        <item>Auctioner</item>
        <item>Bidder</item>
    </string-array>
    <string-array name="Hours">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>


    </string-array>
    <string-array name="Minutes">

        <item>00</item>
        <item>05</item>
        <item>10</item>

        <item>15</item>
        <item>20</item>
        <item>25</item>

        <item>30</item>
        <item>35</item>
        <item>40</item>

        <item>45</item>
        <item>50</item>
        <item>55</item>

    </string-array>
    <string-array name="End_hours">
        <item>0</item>
        <item>1</item>

        <item>2</item>

        <item>3</item>

        <item>4</item>
        <item>5</item>

        <item>6</item>
    </string-array>


</resources>
