<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.harri.auctionsystem.UserAccountActivity.selectItemForAuctionFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myScrollview"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView

            android:src="@android:drawable/ic_menu_camera"
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_height="120dp" />

            <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:inputType="text"
                android:hint="@string/enter_item_name"/>


        </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/entered_bid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:inputType="number"
                    android:hint="@string/enter_item_min_bid"/>


            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Enter_Category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:inputType="text"
                    android:hint="@string/enter_item_category"/>


            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/start_Date_button"
                    android:text="Click to pick Initail Date"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/date_view"
                    />
            </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="16dp"
            android:text="Enter Start Time:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/initial_hour"
            >

        </Spinner>
        <Spinner
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/initial_min"
        >

    </Spinner>
    </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textSize="18dp"
                    android:text="Enter End Time:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
             />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/end_hour"
                    >

                </Spinner>   <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/end_min"
                >

            </Spinner>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/my_error"
    android:textColor="@android:color/holo_red_light"
    />
            </LinearLayout>

            <Button

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/upload_item_data"
                android:text="@string/Click_to_upload"

                android:layout_alignParentBottom="true"

                >


            </Button>

        </LinearLayout>

        </ScrollView>


    </RelativeLayout>

</FrameLayout>
